changed intro text

--- a/colab-notebooks/openai_agent_sdk_vector_store_fixed_plan.ipynb
+++ b/colab-notebooks/openai_agent_sdk_vector_store_fixed_plan.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOJWZk1Joi6ou7TPhfqahCO",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jbdamask/my-own-agents-shove-it/blob/main/colab-notebooks/openai_agent_sdk_vector_store_fixed_plan.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fFh2c9CwG2jH"
+      },
       "source": [
         "# OpenAI Agent SDK: IRS Depreciation Agents\n",
         "I'm using a bunch of different agents to answer IRS depreciation questions\n",
@@ -35,11 +22,8 @@
         "File search uses an OpenAI vector store where I uploaded IRS Publication 946 pdf and data from the publication's B1 and B2 tables.\n",
         "\n",
         "This is a simplified version of openai-agent-sdk-vector-store-llm-as-judge.ipynb\n",
-        "In this version, I decided to provide a fixed plan instead of relying on planning and evaluation agents."
-      ],
-      "metadata": {
-        "id": "fFh2c9CwG2jH"
-      }
+        "In this version, I use a fixed plan instead of relying on planning and evaluation agents. This is because I realized that the plans coming out of the agent we pretty similar so I just made a general one. It's faster and cheaper to just have an execution agent iterate through these steps."
+      ]
     },
     {
       "cell_type": "code",
@@ -54,8 +38,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting openai-agents\n",
             "  Downloading openai_agents-0.0.14-py3-none-any.whl.metadata (8.2 kB)\n",
@@ -130,6 +114,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "6NXBdt3RKTjU",
+        "outputId": "5583e567-a6be-4eea-c9ac-2cbafa568507"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# prompt: import OPENAI_API_KEY from secrets\n",
         "\n",
@@ -137,31 +142,15 @@
         "from dotenv import load_dotenv\n",
         "from google.colab import userdata\n",
         "load_dotenv()  # take environment variables from .env.\n"
-      ],
-      "metadata": {
-        "id": "6NXBdt3RKTjU",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true,
-        "outputId": "5583e567-a6be-4eea-c9ac-2cbafa568507"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "JwfkV-cE2TY9"
+      },
+      "outputs": [],
       "source": [
         "from agents import (\n",
         "    Agent,\n",
@@ -285,27 +274,27 @@
         "    output_type=ExecutorResult\n",
         ")\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "JwfkV-cE2TY9"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# This is where we'll store the results of our executor agent calls\n",
-        "agent_results = List[str] | str | None"
-      ],
+      "execution_count": 6,
       "metadata": {
         "id": "NEhznQnqXrkW"
       },
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# This is where we'll store the results of our executor agent calls\n",
+        "agent_results = List[str] | str | None"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "id": "IahAIy47_biv"
+      },
+      "outputs": [],
       "source": [
         "async def main():\n",
         "    # msg = \"What's the depreciation life of HVAC installation in leased office space?\"\n",
@@ -387,19 +376,11 @@
         "      )\n",
         "      result: ExecutorResult = writer_result.final_output\n",
         "      print(f\"\\nFinal Result: {result}\")"
-      ],
-      "metadata": {
-        "id": "IahAIy47_biv"
-      },
-      "execution_count": 20,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "if __name__ == \"__main__\":\n",
-        "    await main()"
-      ],
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -407,11 +388,10 @@
         "id": "Td6ixzeA2WDF",
         "outputId": "4d0b0302-40d8-43df-f88f-817fff871b12"
       },
-      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Step 1: Classify the asset based on its use, placement (leased or owned property), and permanence (real or personal property).\n",
             "\n",
@@ -647,7 +627,27 @@
             "Final Result: class_life_in_years=7 gds_class_life_in_years=7 ads_class_life_in_years=12 explanation='The asset, a walk-in freezer used in a leased bakery, is typically classified as tangible personal property. For depreciation, under the Modified Accelerated Cost Recovery System (MACRS), it falls under the 7-year property class when using the General Depreciation System (GDS). If using the Alternative Depreciation System (ADS) due to specific requirements, it would fall into a 12-year class life. This classification allows for accelerated depreciation methods such as Section 179 or bonus depreciation, subject to eligibility criteria.' sources='IRS Publication 946, IRS Depreciation Guidelines'\n"
           ]
         }
+      ],
+      "source": [
+        "if __name__ == \"__main__\":\n",
+        "    await main()"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOJWZk1Joi6ou7TPhfqahCO",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
